Setup solid gems, dev env, procfile and bin dev

--- a/config/queue.yml
+++ b/config/queue.yml
@@ -1,18 +1,23 @@
-default: &default
-  dispatchers:
-    - polling_interval: 1
-      batch_size: 500
-  workers:
-    - queues: "*"
-      threads: 3
-      processes: <%= ENV.fetch("JOB_CONCURRENCY", 1) %>
-      polling_interval: 0.1
+queues:
+  clip_generation:
+    concurrency_limit: 5
+    timeout: 360
+  
+  # NEW: Dedicated queue for text extraction
+  # text_extraction:
+  #   concurrency_limit: 5
+  #   timeout: 60
 
-development:
-  <<: *default
+  default:
+    concurrency_limit: 10
 
-test:
-  <<: *default
+workers:
+  - queues: clip_generation
+    threads: 2
+    polling_interval: 5
 
-production:
-  <<: *default
+  # Update: Allow catch-all workers to handle text_extraction too
+  - queues: [default, text_extraction]
+    threads: 3
+    processes: <%= ENV.fetch("JOB_CONCURRENCY", 1) %>
+    polling_interval: 0.1
